<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Sentences">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frases"
            android:textAlignment="center"
            android:textSize="100sp"
            android:layout_marginTop="45sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_sentence"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20sp"
            android:autoSizeMaxTextSize="100dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:text="@string/exemple"
            android:textAlignment="center" />

        <Chronometer
            android:id="@+id/cronometre"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:textSize="70sp" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/play_circle"
            android:layout_marginTop="80sp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:id="@+id/playrecorder">

        </ImageButton>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enrere_button"
            android:textAlignment="center"
            android:layout_marginTop="100sp"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:backgroundTint="@color/blue_1"
            android:id="@+id/buttonBackSentences">

        </Button>

    </LinearLayout>

</FrameLayout>