<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SendData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/enviament_de_dades"
            android:textColor="@color/blue_1"
            android:textSize="50sp">

        </TextView>

        <LinearLayout
            android:layout_width="562dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/apats"
                android:clickable="true"
                android:id="@+id/apats_sendData"
                android:textSize="45sp">

            </TextView>

            <ImageButton
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/checkbox_apats"
                android:layout_marginLeft="50sp"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/empty_check_box">

            </ImageButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="562dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/exercissis_de_pronunciaci"
                android:id="@+id/sentences_sendData"
                android:textSize="40sp">

            </TextView>

            <ImageButton
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50sp"
                android:id="@+id/checkbox_pronunciació"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:clickable="true"
                android:focusable="true"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/empty_check_box">

            </ImageButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="562dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:id="@+id/metrics_sendData"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/ritme_cardiac_i_oxigen"
                android:textSize="40sp">

            </TextView>

            <ImageButton
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50sp"
                android:id="@+id/checkbox_metrics"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/empty_check_box">

            </ImageButton>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/enviar"
            android:scaleX="2"
            android:scaleY="2"
            android:id="@+id/buttonSendData"
            android:layout_marginTop="100sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_1">
        </Button>

    </LinearLayout>
</FrameLayout>