<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_main"
    tools:context=".main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/ela_app"
        android:textAlignment="center"
        android:textColor="?attr/colorSurface"
        android:textSize="80sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="558dp"
        android:layout_marginVertical="250sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSentences"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/sentencesMain"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/voice_image">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/blue_1"
                    android:padding="10dp"
                    android:text="@string/frases"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat">

                </TextView>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/eatMain"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_fastfood">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/blue_1"
                    android:padding="10dp"
                    android:text="@string/menjar"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat">

                </TextView>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:orientation="horizontal"

            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/metriquesMain"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/heart_rate">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/blue_1"
                    android:padding="10dp"
                    android:text="@string/metriques"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat">

                </TextView>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/sendDataMain"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_local_post">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/blue_1"
                    android:padding="10dp"
                    android:text="@string/enviar_dades"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat">

                </TextView>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>
</FrameLayout>